--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Tajawal" rel="stylesheet">
     <link href="./assets/main.css" rel="stylesheet">
 
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/brands.js" integrity="sha384-G/XjSSGjG98ANkPn82CYar6ZFqo7iCeZwVZIbNWhAmvCF2l+9b5S21K4udM7TGNu" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
     <div class="content">
@@ -30,14 +30,14 @@
           <a href="https://www.instagram.com/rjfriberg/" title="@rjfriberg on Instagram... you're gonna need to know me first" alt="Instagram" class="icon"><i class="fab fa-instagram fa-2x"></i></a>
         </div>
         <div class="column footer-controls">
-          <a href="#" id="start" alt="Start animation">Make this page fancy</a>
+          <a href="#" id="start" title="Make this page fancy" alt="Start animation"><i class="fas fa-toggle-on fa-2x"></i></a>
         </div>
       </div>
     </div>
     <canvas></canvas>
   </body>
 </html>
-
+<script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 // animation settings
 const duration = 10000;
@@ -158,17 +158,23 @@ d3.json( "./data/coordinates.json", data => {
   // startAnimation();
 });
 
-// Set up event click
-document.querySelector("#start").addEventListener("click", function(event) {
+// Set up event listeners
+const startButton = document.querySelector("#start");
+startButton.addEventListener("click", function(event) {
   event.preventDefault();
   if (animating) {
     stopAnimation();
-    this.innerText = 'Start animation';
+    this.innerHTML = '<i class="fas fa-toggle-on fa-2x"></i>';
+    this.title = 'Turn that fanciness back on';
+    this.alt = 'Restart animation';
   } else {
     startAnimation();
-    this.innerText = 'Stop animation';
+    this.innerHTML = '<i class="fas fa-toggle-off fa-2x"></i>';
+    this.title = 'Stop all the fanciness!';
+    this.alt = 'Stop animation';
   }
 }, false);
+
 
 // Set up resize listener
 window.onresize = function () {
